<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/companyNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_border_edit_text_background"
        android:hint="@string/new_register_company_name"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:minHeight="80dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/companyNameForBadgeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/companyNameForBadgeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_border_edit_text_background"
        android:hint="@string/new_register_company_name_for_badge"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:minHeight="80dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/companyNameEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameForBadgeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_border_edit_text_background"
        android:hint="@string/new_register_name_for_badge"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:minHeight="80dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/companyNameForBadgeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyNameEditText" />

    <EditText
        android:id="@+id/companyOfficeForBadgeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_border_edit_text_background"
        android:hint="@string/new_register_company_office"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:minHeight="80dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="@id/companyNameForBadgeEditText"
        app:layout_constraintStart_toStartOf="@+id/companyNameForBadgeEditText"
        app:layout_constraintTop_toBottomOf="@+id/companyNameForBadgeEditText" />

    <TextView
        android:id="@+id/newRegisterAddressConfirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/new_register_company_continue"
        android:textColor="@color/blue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/newRegisterAddressBackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/new_register_company_back"
        android:textColor="@color/grey"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>